--- a/Music-Manager/songpage.ui
+++ b/Music-Manager/songpage.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>669</width>
-    <height>348</height>
+    <width>776</width>
+    <height>469</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -52,10 +52,10 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>80</y>
+     <x>10</x>
+     <y>60</y>
      <width>231</width>
-     <height>261</height>
+     <height>401</height>
     </rect>
    </property>
    <property name="font">
@@ -155,34 +155,66 @@
      </item>
     </layout>
    </widget>
-   <widget class="QPushButton" name="pushButton_addToSongLibrary">
+   <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
       <x>40</x>
       <y>210</y>
-      <width>141</width>
-      <height>41</height>
+      <width>156</width>
+      <height>177</height>
      </rect>
     </property>
-    <property name="font">
-     <font>
-      <family>Arial</family>
-      <pointsize>14</pointsize>
-      <italic>false</italic>
-     </font>
-    </property>
-    <property name="text">
-     <string>Add to Song Library</string>
-    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_3">
+     <item alignment="Qt::AlignmentFlag::AlignHCenter|Qt::AlignmentFlag::AlignVCenter">
+      <widget class="QLabel" name="label_albumArtPreview">
+       <property name="minimumSize">
+        <size>
+         <width>100</width>
+         <height>100</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>100</width>
+         <height>100</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Album Artwork</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_uploadArtwork">
+       <property name="text">
+        <string>Upload Artwork</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_addToSongLibrary">
+       <property name="font">
+        <font>
+         <family>Arial</family>
+         <pointsize>14</pointsize>
+         <italic>false</italic>
+        </font>
+       </property>
+       <property name="text">
+        <string>Add to Song Library</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>80</y>
-     <width>391</width>
-     <height>261</height>
+     <x>250</x>
+     <y>60</y>
+     <width>511</width>
+     <height>401</height>
     </rect>
    </property>
    <property name="font">
@@ -197,18 +229,18 @@
    <widget class="QTableWidget" name="tableWidget_songs">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>0</x>
       <y>20</y>
-      <width>381</width>
-      <height>191</height>
+      <width>511</width>
+      <height>341</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_displaySongs">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>210</y>
+      <x>180</x>
+      <y>360</y>
       <width>141</width>
       <height>41</height>
      </rect>
