--- a/Music-Manager/user.ui
+++ b/Music-Manager/user.ui
@@ -191,6 +191,56 @@
     </item>
    </layout>
   </widget>
+  <widget class="QPushButton" name="play_song">
+   <property name="geometry">
+    <rect>
+     <x>510</x>
+     <y>40</y>
+     <width>147</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>120</width>
+     <height>40</height>
+    </size>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial</family>
+     <pointsize>16</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Play Song</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pause_song">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>90</y>
+     <width>147</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>120</width>
+     <height>40</height>
+    </size>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial</family>
+     <pointsize>16</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>pause song</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
