--- a/Music-Manager/playlistmanagement.ui
+++ b/Music-Manager/playlistmanagement.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>891</width>
+    <width>669</width>
     <height>432</height>
    </rect>
   </property>
@@ -104,18 +104,16 @@
     <string>Playlist Management Page</string>
    </property>
    <property name="alignment">
-    <set>Qt::AlignCenter</set>
+    <set>Qt::AlignmentFlag::AlignCenter</set>
    </property>
   </widget>
-
-  <!-- Corrected button row using QHBoxLayout -->
-  <widget class="QWidget" name="widget_buttonRow">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>70</y>
-     <width>800</width>
-     <height>50</height>
+     <y>90</y>
+     <width>651</width>
+     <height>42</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -184,7 +182,7 @@
       <property name="minimumSize">
        <size>
         <width>154</width>
-        <height>32</height>
+        <height>0</height>
        </size>
       </property>
       <property name="maximumSize">
@@ -200,14 +198,13 @@
     </item>
    </layout>
   </widget>
-
-  <widget class="QLabel" name="label_3">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>510</x>
-     <y>70</y>
-     <width>161</width>
-     <height>40</height>
+     <x>40</x>
+     <y>360</y>
+     <width>611</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="font">
@@ -216,6 +213,44 @@
      <pointsize>14</pointsize>
     </font>
    </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <property name="spacing">
+     <number>43</number>
+    </property>
+    <item>
+     <widget class="QPushButton" name="AddSong">
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Add Song</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="DeleteSong">
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Delete Song</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="SearchSong">
+      <property name="text">
+       <string>Search Song</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
