--- a/Music-Manager/playlistmanagement.ui
+++ b/Music-Manager/playlistmanagement.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>669</width>
-    <height>432</height>
+    <width>912</width>
+    <height>434</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -87,7 +87,7 @@
   <widget class="QLabel" name="label_PMTitle">
    <property name="geometry">
     <rect>
-     <x>100</x>
+     <x>240</x>
      <y>30</y>
      <width>561</width>
      <height>31</height>
@@ -112,7 +112,7 @@
     <rect>
      <x>10</x>
      <y>90</y>
-     <width>651</width>
+     <width>821</width>
      <height>42</height>
     </rect>
    </property>
@@ -203,7 +203,7 @@
     <rect>
      <x>40</x>
      <y>360</y>
-     <width>611</width>
+     <width>801</width>
      <height>41</height>
     </rect>
    </property>
@@ -247,6 +247,56 @@
      <widget class="QPushButton" name="SearchSong">
       <property name="text">
        <string>Search Song</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>670</x>
+     <y>170</y>
+     <width>171</width>
+     <height>171</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QPushButton" name="play_song">
+      <property name="minimumSize">
+       <size>
+        <width>120</width>
+        <height>40</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>16</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Play Song</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="pause_song">
+      <property name="minimumSize">
+       <size>
+        <width>120</width>
+        <height>40</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>16</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Pause Song</string>
       </property>
      </widget>
     </item>
