--- a/Music-Manager/admin.ui
+++ b/Music-Manager/admin.ui
@@ -291,6 +291,9 @@
     <property name="text">
      <string>Add User</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QRadioButton" name="radioButton_deleteUser">
     <property name="geometry">
@@ -311,6 +314,9 @@
     <property name="text">
      <string>Delete User      </string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_2">
@@ -370,4 +376,7 @@
  </widget>
  <resources/>
  <connections/>
+ <buttongroups>
+  <buttongroup name="buttonGroup"/>
+ </buttongroups>
 </ui>
